--- a/farmacia/myapp/templates/myapp/index.html
+++ b/farmacia/myapp/templates/myapp/index.html
@@ -1,6 +1,20 @@
+<head>
+    <title>
+        Productos
+    </title>
+</head>
+
+<body>
+    <h2>
+        Productos
+    </h2>
+
     {% for producto in productos %}
-        <li>
-            {{ producto.nombre }}
-            <img src='{{ producto.imagen.url }}'/>
-        </li>
+                <h3>
+                    {{ producto.nombre }}
+                    {{ producto.precio }}
+                </h3>
+                <img src='{{ producto.imagen.url }}' height="200" width="200">
+                <hr>
     {% endfor %}
+</body>
