11-Farmacia - Se Cambio todo el codigo html para trabajar con una plantilla de bootstrap y se arreglo el codigo html de la plantilla para ajustalo a mi necesidad y se agrego paginacion para mostrar cierta cantidad de productos y no cargar tanto la pagina

--- a/farmacia/myapp/templates/myapp/index.html
+++ b/farmacia/myapp/templates/myapp/index.html
@@ -1,20 +1,107 @@
-<head>
-    <title>
-        Productos
-    </title>
-</head>
 
-<body>
-    <h2>
-        Productos
-    </h2>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v3.8.5">
+    <title>Productos</title>
 
-    {% for producto in productos %}
-                <h3>
-                    {{ producto.nombre }}
-                    {{ producto.precio }}
-                </h3>
-                <img src='{{ producto.imagen.url }}' height="200" width="200">
-                <hr>
-    {% endfor %}
-</body>
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
+
+    <!-- Bootstrap core CSS -->
+<link href="https://getbootstrap.com/docs/4.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="album.css" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+
+  <div class="navbar navbar-dark bg-dark shadow-sm">
+    <div class="container d-flex justify-content-between">
+      <a href="#" class="navbar-brand d-flex align-items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2" viewBox="0 0 24 24" focusable="false"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
+        <strong>Productos</strong>
+      </a>
+    </div>
+  </div>
+</header>
+
+<main role="main">
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <div class="row">
+        
+
+        {% for producto in productos %}
+          <div class="col-md-4">
+            <div class="card mb-4 shadow-sm">
+              <!-- Imagen -->          
+              <img src='{{ producto.imagen.url }}' width="100%" height="225">
+              <!-- Descripcion -->
+              <div class="card-body">
+                <p class="card-text">
+                  Producto: {{ producto.nombre }}
+                  <br>
+                  Precio: {{ producto.precio }}
+                  <br>
+                  Descripcion: {{ producto.descripcion }}
+                  <br>
+                </p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <small class="text-muted">9 mins</small>
+                </div>
+              </div>
+              <!-- -->
+            </div>
+          </div>
+        {% endfor %}
+
+        
+
+      </div>
+      <div class="pagination">
+            <span class="step-links">
+                {% if productos.has_previous %}
+                    <a href="?page=1">&laquo; Primera</a>
+                    <a href="?page={{ productos.previous_page_number }}">Anterior</a>
+                {% endif %}
+                <span class="current">
+                    Page {{ productos.number }} of {{ productos.paginator.num_pages }}.
+                </span>
+                {% if productos.has_next %}
+                    <a href="?page={{ productos.next_page_number }}">Siguiente</a>
+                    <a href="?page={{ productos.paginator.num_pages }}">Ultima &raquo;</a>
+                {% endif %}
+            </span>
+        </div>
+    </div>
+  </div>
+</main>
+
+<footer class="text-muted">
+
+</footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script>window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script></body>
+</html>
